src/libadalang/src/libadalang.h

/*
 * Data type for all nodes. Nodes are assembled to make up a tree.  See the
 * node primitives below to inspect such trees.
 *
 * Unlike for contexts and units, this type has weak-reference semantics:
 * keeping a reference to a node has no effect on the decision to keep the unit
 * that it owns allocated. This means that once all references to the context
 * and units related to a node are dropped, the context and its units are
 * deallocated and the node becomes a stale reference: most operations on it
 * will raise a ``Stale_Reference_Error``.
 *
 * Note that since reparsing an analysis unit deallocates all the nodes it
 * contains, this operation makes all reference to these nodes stale as well.
 */
typedef void* ada_base_node;
/*
 * Reference to a symbol. Symbols are owned by analysis contexts, so they must
 * not outlive them. This type exists only in the C API, and roughly wraps the
 * corresponding Ada type (an array fat pointer).
 */
typedef struct {
   void *data;
   void *bounds;
} ada_symbol_type;
/*
 * Type to contain Unicode text data.
 */
typedef struct {
   int length;
   int ref_count;
   uint32_t content[1];
} *ada_string_type;
typedef uint8_t ada_bool;
        

typedef struct ada_ada_node_array_record *ada_ada_node_array;
        

typedef struct ada_analysis_unit_array_record *ada_analysis_unit_array;
        

typedef struct ada_unbounded_text_type_array_record *ada_unbounded_text_type_array;
        



typedef struct {
        ada_internal_metadata md;
        ada_env_rebindings_type rebindings;
        ada_bool from_rebound;
} ada_internal_entity_info;
        



typedef struct {
        ada_base_node node;
        ada_internal_entity_info info;
} ada_base_entity;
        



/*

 */
struct ada_ada_node_array_record {
   int n;
   int ref_count;
   ada_base_entity items[1];
};
        



/*

 */
struct ada_analysis_unit_array_record {
   int n;
   int ref_count;
   ada_analysis_unit items[1];
};
        



/*

 */
struct ada_unbounded_text_type_array_record {
   int n;
   int ref_count;
   ada_symbol_type items[1];
};
        



/*
 * Return whether this declaration is visible from the point of view of the
 * given ``origin`` node.
 *
 * .. attention:: Only package-level (public or private) declarations are
 *    supported for now.
 */
extern int ada_basic_decl_p_is_visible(
    ada_base_entity *node,

        
        const ada_base_entity*
        from_node,

    ada_bool *value_p
);
        



/*
 * If Self declares a primitive subprogram of some tagged type T, return the
 * set of all subprogram declarations that it overrides (including itself).
 *
 * .. note:: for the moment this only works for tagged types. Remains to be
 *    seen if we need to extend it.
 */
extern int ada_basic_decl_p_base_subp_declarations(
    ada_base_entity *node,

        
        ada_bool
        imprecise_fallback,

    ada_ada_node_array *value_p
);
        



/*
 * If Self declares a primitive subprogram of some tagged type T, return the
 * root subprogram declarations that it overrides. There can be several, as in
 * the following scenario:
 *
 * * package Root defines the root tagged type T and subprogram Foo.
 *
 * * package Itf defines interface I and abstract subprogram Foo.
 *
 * * package D defines "type U is new Root.T and Itf.I" and an overriding
 *   subprogram Foo.
 *
 * Here, root_subp_declarations of Foo defined in package D will return both
 * Foo from package Root and Foo from package Itf.
 */
extern int ada_basic_decl_p_root_subp_declarations(
    ada_base_entity *node,

        
        const ada_base_entity*
        origin,
        
        ada_bool
        imprecise_fallback,

    ada_ada_node_array *value_p
);
        



/*
 * If Self is the declaration of a primitive of some type T, return the list of
 * all subprogram that override this subprogram among the given units.
 */
extern int ada_basic_decl_p_find_all_overrides(
    ada_base_entity *node,

        
        ada_analysis_unit_array
        units,
        
        ada_bool
        imprecise_fallback,

    ada_ada_node_array *value_p
);
        



/*
 * Get all the names of this basic declaration.
 */
extern int ada_basic_decl_p_defining_names(
    ada_base_entity *node,


    ada_ada_node_array *value_p
);
        



/*
 * Get the name of this declaration. If this declaration has several names, it
 * will return the first one.
 */
extern int ada_basic_decl_p_defining_name(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*
 * Return the type expression for this BasicDecl if applicable, a null
 * otherwise.
 */
extern int ada_basic_decl_p_type_expression(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*
 * If Self is a Subp, returns the specification of this subprogram.
 *
 * If ``follow_generic`` is True, will also work for instances of
 * ``GenericSubpDecl``.
 */
extern int ada_basic_decl_p_subp_spec_or_null(
    ada_base_entity *node,

        
        ada_bool
        follow_generic,

    ada_base_entity *value_p
);
        



/*
 * Return True if self is a subprogram node in the general sense (which is, an
 * entity that can be called). This includes separates and entries.
 *
 * .. attention: This is a purely syntactic query and will return True for
 *    everything that is a syntactic entity that can be called like a
 *    subprogram in some contexts, even generic formal subprograms for example.
 */
extern int ada_basic_decl_p_is_subprogram(
    ada_base_entity *node,


    ada_bool *value_p
);
        



/*
 * Return the relative name for Self. If Self's defining name is ``A.B.C``,
 * return ``C`` as a node.
 */
extern int ada_basic_decl_p_relative_name(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*
 * Return the relative name for Self, as text.
 */
extern int ada_basic_decl_p_relative_name_text(
    ada_base_entity *node,


    ada_symbol_type *value_p
);
        



/*
 * Return the next part of this declaration, if applicable.
 *
 * .. note:: It is not named next_part, because BaseTypeDecl has a more precise
 *    version of next_part that returns a BaseTypeDecl. Probably, we want to
 *    rename the specific versions, and have the root property be named
 *    next_part. (TODO R925-008)
 */
extern int ada_basic_decl_p_next_part_for_decl(
    ada_base_entity *node,

        
        ada_bool
        imprecise_fallback,

    ada_base_entity *value_p
);
        



/*
 * Return the body corresponding to this declaration, if applicable.
 *
 * .. note:: It is not named body_part, subclasses have more precise versions
 *    named body_part and returning a more precise result. Probably, we want to
 *    rename the specific versions, and have the root property be named
 *    body_part. (TODO R925-008)
 */
extern int ada_basic_decl_p_body_part_for_decl(
    ada_base_entity *node,

        
        ada_bool
        imprecise_fallback,

    ada_base_entity *value_p
);
        



/*
 * Given an origin node and the entity represented by Self, this property
 * returns the most visible completion of Self that can be seen by origin,
 * according to Ada's visibility rules.
 */
extern int ada_basic_decl_p_most_visible_part(
    ada_base_entity *node,

        
        const ada_base_entity*
        origin,
        
        ada_bool
        imprecise_fallback,

    ada_base_entity *value_p
);
        



/*
 * Return the fully qualified name corresponding to this declaration, as an
 * array of symbols.
 */
extern int ada_basic_decl_p_fully_qualified_name_array(
    ada_base_entity *node,

        
        ada_bool
        include_profile,

    ada_unbounded_text_type_array *value_p
);
        



/*
 * Return the fully qualified name corresponding to this declaration.
 */
extern int ada_basic_decl_p_fully_qualified_name(
    ada_base_entity *node,


    ada_string_type *value_p
);
        



/*
 * Return a canonical representation of the fully qualified name corresponding
 * to this declaration.
 */
extern int ada_basic_decl_p_canonical_fully_qualified_name(
    ada_base_entity *node,


    ada_string_type *value_p
);
        



/*
 * Return a unique identifying name for this declaration, provided this
 * declaration is a public declaration. In the case of subprograms, this will
 * include the profile.
 *
 * .. attention:: This will only return a unique name for public declarations.
 *    Notably, anything nested in an unnamed declare block won't be handled
 *    correctly.
 */
extern int ada_basic_decl_p_unique_identifying_name(
    ada_base_entity *node,


    ada_string_type *value_p
);
        



/*
 * Return whether this object is constant or not.
 */
extern int ada_basic_decl_p_is_constant_object(
    ada_base_entity *node,


    ada_bool *value_p
);
        



/*

 */
extern int ada_abstract_state_decl_f_name(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*
 * Return the expression wrapped by this declaration.
 */
extern int ada_anonymous_expr_decl_f_expr(
    ada_base_entity *node,


    ada_base_entity *value_p
);
        



/*
 * Return the generic formal object declaration corresponding to this actual.
 */
extern int ada_anonymous_expr_decl_p_get_formal(
    ada_base_entity *node,

        
        ada_bool
        imprecise_fallback,

    ada_base_entity *value_p
);
        



/*
 * Return the type for this formal.
 */
extern int ada_base_formal_param_decl_p_formal_type(
    ada_base_entity *node,

        
        const ada_base_entity*
        origin,

    ada_base_entity *value_p
);
        



/*

 */
extern int ada_component_decl_f_ids(
    ada_base_entity *node,


    ada_base_entity *value_p
);